fix overflow issue

--- a/src/app/content/content.component.css
+++ b/src/app/content/content.component.css
@@ -1,20 +1,9 @@
-.content {
-    display: flex;
+.text {
     max-width: 100%;
-    margin-bottom: 4rem;
-}
-
-.content .text {
     overflow-x: hidden;
     overflow-y: hidden;
     height: 60vh;
     flex-grow: 1;
-}
-
-.content .video {
-    margin: 0 1rem;
-    height: 60vh;
-    width: 90%;
 }
 
 .audioPlayer {
@@ -27,6 +16,7 @@
     margin-top: 5px;
     background-color: white;
     color: grey;
+    margin-bottom: 4rem;
 }
 
 .btn:hover {
